# os-legal-explorer

./: .dockerignore  .env.prod  .gitignore  Dockerfile  Makefile  README.md  TODO.md  cline_planning.md  docker-compose.yml  docker-entrypoint.sh  download_apoc.sh  frontend_plan.md  outputrepomix-output.txt  package-lock.json  package.json  prd.md  pyproject.toml  query.sh  tailwind.config.js
frontend/static/css/: tailwind.css
frontend/templates/: index.html
frontend/templates/components/: case-details.html  citation-list.html
neo4j_bulk_import/: import_opinions.sh
neo4j_bulk_import/helper_scripts/: clear_neo4j.py  query_build_opinion_cluster.py
scripts/: unpack_citation_relationships.py  upload_to_cloudflare_r2.py
src/: main.py
src/api/: __init__.py  database.py  main.py  shared.py
src/api/models/: __init__.py  citations.py  converters.py  opinions.py  pipeline.py  stats.py
src/api/routers/: __init__.py  cases.py  citations.py  clusters.py  feedback.py  network.py  opinions.py  pipeline.py  search.py  stats.py
src/citation/: __init__.py  parser.py
src/llm_extraction/: batch_gemini.py  models.py  prompts.py  rate_limited_gemini.py  rate_limited_openai.py
src/neo4j/: _dont_use_async_loader.py  legacy_batch_load_citations_to_neo4j.py  legacy_load_courtlistener_citations.py  legacy_load_neo4j.py  models.py  neomodel_loader.py  reset_db.py
src/neo4j_db/: models.py  neomodel_loader.py
src/neo4j_import/: citations.header  import_opinions.sh  opinions.header
src/postgres/: database.py  db_utils.py  models.py
src/ui/: pipeline.html
(+43 files in other folders)
