[project]
name = "os-legal-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.8",
    "google-genai>=1.3.0",
    "json-repair>=0.39.1",
    "neo4j>=5.27.0",
    "neomodel>=5.4.3",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.38",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]
