[project]
name = "os-legal-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "eyecite>=2.6.11",
    "fastapi[standard]>=0.115.8",
    "google-genai>=1.3.0",
    "jinja2>=3.1.5",
    "json-repair>=0.39.1",
    "neo4j>=5.27.0",
    "neomodel>=5.4.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "reporters-db>=3.2.54",
    "sqlalchemy>=2.0.38",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]
